--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,8 @@ jobs:
                       ./livekit-plugins/livekit-plugins-anthropic \
                       ./livekit-plugins/livekit-plugins-llama-index \
                       ./livekit-plugins/livekit-plugins-fal \
-                      ./livekit-plugins/livekit-plugins-assemblyai
+                      ./livekit-plugins/livekit-plugins-assemblyai \
+                      ./livekit-plugins/livekit-plugins-smallest
 
       - name: Install stub packages
         run: |
@@ -92,4 +93,5 @@ jobs:
                -p livekit.plugins.azure \
                -p livekit.plugins.anthropic \
                -p livekit.plugins.fal \
-               -p livekit.plugins.assemblyai
+               -p livekit.plugins.assemblyai \
+               -p livekit.plugins.smallest
