--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,5 +82,5 @@ jobs:
                -p livekit.plugins.fal \
                -p livekit.plugins.playai \
                -p livekit.plugins.assemblyai \
-               -p livekit.plugins.smallestai
+               -p livekit.plugins.smallestai \
                -p livekit.plugins.rime \
